--- a/Prototype/packages/repositories.config
+++ b/Prototype/packages/repositories.config
@@ -2,6 +2,5 @@
 <repositories>
   <repository path="..\MediBook.Core\packages.config" />
   <repository path="..\MediBook.Server\packages.config" />
-  <repository path="..\SocketIO.Client\packages.config" />
-  <repository path="..\Threads.Core\packages.config" />
+  <repository path="..\MediBook.Testing\packages.config" />
 </repositories>
