--- a/Prototype/MediBook.Server/Web.config
+++ b/Prototype/MediBook.Server/Web.config
@@ -9,8 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MediBook.Server-20140313021259.mdf;Initial Catalog=aspnet-MediBook.Server-20140313021259;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="LocalDBConnection" connectionString="Data Source=(LocalDB)\V11.0;Initial Catalog=MediBookDB;Integrated Security=True;
+    AttachDbFilename=|DataDirectory|\MediBookDB.mdf" providerName="System.Data.SqlClient" />
+
+    <add name="SQLExpressConnection" connectionString="Data Source.\SQLEXPRESS;Initial Catalog=MediBookDB;Integrated Security=True;
+    AttachDbFilename=|DataDirectory|\MediBookDB.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -29,6 +32,12 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <security>
+      <authentication>
+        <anonymousAuthentication enabled="true" />
+        <windowsAuthentication enabled="false" />
+      </authentication>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
