--- a/Prototype/MediBook.Shared/MediBook.Shared.csproj
+++ b/Prototype/MediBook.Shared/MediBook.Shared.csproj
@@ -39,10 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config\ConfigurationManager.cs" />
     <Compile Include="Constants\Appointment\AppointmentStatus.cs" />
     <Compile Include="Constants\Appointment\AppointmentType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Config\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
