--- a/Prototype/packages/repositories.config
+++ b/Prototype/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\MediBook.Core\packages.config" />
   <repository path="..\MediBook.Server\packages.config" />
+  <repository path="..\MediBook.Shared\packages.config" />
   <repository path="..\MediBook.Testing\packages.config" />
 </repositories>
