--- a/Prototype/MediBook.Shared/MediBook.Shared.csproj
+++ b/Prototype/MediBook.Shared/MediBook.Shared.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Models\DoctorModel.cs" />
     <Compile Include="Models\Enums\PriorityGroup.cs" />
     <Compile Include="Models\LocationModel.cs" />
+    <Compile Include="Models\NotificationModel.cs" />
     <Compile Include="Models\PatientModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
