--- a/Prototype/MediBook.Server/MediBook.Server.csproj
+++ b/Prototype/MediBook.Server/MediBook.Server.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LocationController.cs" />
     <Compile Include="Controllers\PatientController.cs" />
+    <Compile Include="DumbScheduler.cs" />
     <Compile Include="Exceptions\AccountAlreadyExistsException.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
