--- a/Prototype/packages/repositories.config
+++ b/Prototype/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\MediBook.Core\packages.config" />
+  <repository path="..\MediBook.Server.DumbScheduler\packages.config" />
   <repository path="..\MediBook.Server\packages.config" />
   <repository path="..\MediBook.Shared\packages.config" />
   <repository path="..\MediBook.Testing\packages.config" />
