--- a/Prototype/MediBook.Android/MediBook.Client.Android.csproj
+++ b/Prototype/MediBook.Android/MediBook.Client.Android.csproj
@@ -67,11 +67,13 @@
     <Compile Include="Fragments\AppointmentList.cs" />
     <Compile Include="Fragments\NotificationList.cs" />
     <Compile Include="PushHandlerService.cs" />
+    <Compile Include="Screens\AppointmentScreen.cs" />
     <Compile Include="Screens\HomeScreen.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App.cs" />
     <Compile Include="Screens\LoginScreen.cs" />
+    <Compile Include="Screens\ScheduleAppointmentScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -91,6 +93,7 @@
     <AndroidResource Include="Resources\Drawable\Selector.axml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\Layout\AppointmentScreen.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Layout\Home.axml" />
@@ -109,6 +112,7 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\Values\Colors.xml" />
+    <AndroidResource Include="Resources\Drawable\Medibook_Icon_72x72.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GCM.Client\GCM.Client.csproj">
