--- a/Prototype/MediBook.Android/Properties/AndroidManifest.xml
+++ b/Prototype/MediBook.Android/Properties/AndroidManifest.xml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="internalOnly" android:versionCode="1">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="internalOnly" android:versionCode="2" android:versionName="0.1.2.0">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="MediBook" android:icon="@drawable/Icon"></application>
+	<application android:label="MediBook" android:icon="@drawable/Medibook_Icon_72x72"></application>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
-	<uses-permission android:name="medibook.permission.C2D_MESSAGE" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<uses-permission android:name="android.permission.C2D_MESSAGE" />
+	<uses-permission android:name="android.permission.READ_CALENDAR" />
+	<uses-permission android:name="android.permission.WRITE_CALENDAR" />
 	<permission android:name="medibook.permission.C2D_MESSAGE" />
-                   
 </manifest>
