--- a/Prototype/MediBook.Android/MediBook.Client.Android.csproj
+++ b/Prototype/MediBook.Android/MediBook.Client.Android.csproj
@@ -18,11 +18,11 @@
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseLatestPlatformSdk>
     </AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v4.0.3</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.3</TargetFrameworkVersion>
     <AndroidSupportedAbis>armeabi,armeabi-v7a,x86</AndroidSupportedAbis>
     <AndroidStoreUncompressedFileExtensions />
     <MandroidI18n />
-    <JavaMaximumHeapSize />
+    <JavaMaximumHeapSize>512m</JavaMaximumHeapSize>
     <JavaOptions />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -50,6 +50,9 @@
     <AndroidLinkMode>SdkOnly</AndroidLinkMode>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GooglePlayServicesLib">
+      <HintPath>libs\GooglePlayServicesLib.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="Mono.Android.Export" />
     <Reference Include="mscorlib" />
@@ -61,6 +64,16 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
+    <Reference Include="Xamarin.Android.Support.v4, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>libs\Xamarin.Android.Support.v4.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Android.Support.v7.AppCompat">
+      <HintPath>libs\Xamarin.Android.Support.v7.AppCompat.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Android.Support.v7.MediaRouter">
+      <HintPath>libs\Xamarin.Android.Support.v7.MediaRouter.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Fragments\Adapters\AppointmentListAdapter.cs" />
@@ -71,14 +84,14 @@
     <Compile Include="Screens\HomeScreen.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="App.cs" />
     <Compile Include="Screens\LoginScreen.cs" />
+    <Compile Include="Screens\MapScreen.cs" />
     <Compile Include="Screens\ScheduleAppointmentScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
-    <AndroidResource Include="Resources\Layout\Login.axml">
+    <AndroidResource Include="Resources\Layout\LoginScreen.axml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\Layout\AppointmentList.axml">
@@ -90,18 +103,28 @@
     <AndroidResource Include="Resources\Layout\CustomList.axml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\Drawable\Selector.axml">
+    <AndroidResource Include="Resources\Drawable\button_selector.xml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\Layout\AppointmentScreen.axml" />
+    <AndroidResource Include="Resources\Layout\ScheduleAppointmentScreen.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\Layout\MapScreen.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\Layout\Home.axml" />
+    <AndroidResource Include="Resources\Layout\HomeScreen.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Drawable\Icon.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="libs\GooglePlayServicesLib.dll" />
+    <Content Include="libs\Xamarin.Android.Support.v4.dll" />
+    <Content Include="libs\Xamarin.Android.Support.v7.AppCompat.dll" />
+    <Content Include="libs\Xamarin.Android.Support.v7.MediaRouter.dll" />
     <Content Include="Properties\AndroidManifest.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -113,6 +136,10 @@
     </AndroidResource>
     <AndroidResource Include="Resources\Values\Colors.xml" />
     <AndroidResource Include="Resources\Drawable\Medibook_Icon_72x72.png" />
+    <AndroidResource Include="Resources\Drawable\appointment_selector.xml" />
+    <AndroidResource Include="Resources\Drawable\date_time_picker_dialog.xml" />
+    <AndroidResource Include="Resources\Menu\home_screen_menu.xml" />
+    <AndroidResource Include="Resources\Menu\appointment_screen_menu.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GCM.Client\GCM.Client.csproj">
