--- a/Prototype/MediBook.Server/MediBook.Server.csproj
+++ b/Prototype/MediBook.Server/MediBook.Server.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AppointmentBindingModels.cs" />
     <Compile Include="Models\DataContext.cs" />
     <Compile Include="Notification\NotificationService.cs" />
     <Compile Include="Notification\PushNotification.cs" />
