--- a/Prototype/MediBook.Shared/MediBook.Shared.csproj
+++ b/Prototype/MediBook.Shared/MediBook.Shared.csproj
@@ -52,20 +52,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Enums\AppointmentStatus.cs" />
+    <Compile Include="Config\Configuration.cs" />
+    <Compile Include="Enums\AppointmentStatus.cs" />
+    <Compile Include="Enums\NotificationType.cs" />
     <Compile Include="Models\AppointmentModel.cs" />
     <Compile Include="Models\AppointmentTypeModel.cs" />
     <Compile Include="Models\DoctorModel.cs" />
-    <Compile Include="Models\Enums\PriorityGroup.cs" />
+    <Compile Include="Enums\PriorityGroup.cs" />
     <Compile Include="Models\LocationModel.cs" />
     <Compile Include="Models\NotificationModel.cs" />
     <Compile Include="Models\PatientModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="utils\DateTimeExtensions.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Config\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
