--- a/Prototype/MediBook.Android/Properties/AndroidManifest.xml
+++ b/Prototype/MediBook.Android/Properties/AndroidManifest.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="internalOnly" android:versionCode="2" android:versionName="0.1.2.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="internalOnly" android:versionCode="2" android:versionName="0.1.3.0">
 	<uses-sdk android:minSdkVersion="18" android:targetSdkVersion="18" />
 	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
-	<application android:label="MediBook" android:icon="@drawable/Medibook_Icon_72x72">
+	<application android:label="MediBook" android:icon="@drawable/Icon">
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<!-- Put your Google Maps V2 API Key here. -->
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyAcbkTIcCjuYXiSUcT847gnSAW5GdD9P-8" />
@@ -15,9 +15,9 @@
 	<uses-permission android:name="android.permission.READ_CALENDAR" />
 	<uses-permission android:name="android.permission.WRITE_CALENDAR" />
 	<permission android:name="medibook.client.android.permission.C2D_MESSAGE" />
-	<uses-permission android:name="medibook.client.android.permission.MAPS_RECEIVE" />
 	<permission android:name="medibook.client.android.permission.MAPS_RECEIVE" android:protectionLevel="signature" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+	<uses-permission android:name="android.permission.MAPS_RECEIVE" />
+  <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 </manifest>
