--- a/Prototype/MediBook.Shared/MediBook.Shared.csproj
+++ b/Prototype/MediBook.Shared/MediBook.Shared.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Models\LocationModel.cs" />
     <Compile Include="Models\NotificationModel.cs" />
     <Compile Include="Models\PatientModel.cs" />
+    <Compile Include="Models\PossibleTime.cs" />
+    <Compile Include="Models\ScheduleResponse.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utils\DateTimeExtensions.cs" />
