--- a/Prototype/MediBook.Server/MediBook.Server.csproj
+++ b/Prototype/MediBook.Server/MediBook.Server.csproj
@@ -225,6 +225,7 @@
       <DependentUpon>201404290028410_contact_number.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\ExampleData.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AppointmentBindingModels.cs" />
